<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_testing">测试中</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="search">搜索</string>
    <string name="app_name">连接助手</string>
    <string name="app_addContacts">添加联系人</string>
    <string name="app_today">单据联</string>
    <string name="today_index">""单据: "</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ism_notifi_title">连接助手提醒</string>
    <string name="ism_notifi_msg">Bluetooth connect click</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="renameConfirmation_title">名称</string>
    <string name="rctNoCalls">记录为空</string>
    <string name="menu_viewContact" msgid="2795575601596468581">"Add select contacts"</string>
    <string name="recentCalls_removeFromRecentList" msgid="401662244636511330">"Delete select item"</string>
    <string name="recentCalls_nocarecontacts" msgid="401662244636511330">"no care"</string>
    <string name="recentCalls_deleteAll" msgid="6352364392762163704">"Delete"</string>
    <string name="clearCallLogConfirmation_title" msgid="718072843006222703">"Clear All Data"</string>
    <string name="clearCallLogConfirmation" msgid="7625927669136267636">"Are you sure to delete?"</string>
    <string name="recentCallsIconLabel" msgid="1419116422359067949">"Calls"</string>
    <string name="recordTodayLabel" msgid="1419116422359067949">"Today"</string>
    <string name="contactsIconLabel" msgid="7666609097606552806">"Contacts"</string>
    
    <string name="rid_pupheight">显示高度  </string>
    <string name="dialog_title_warnning">警告</string>
    <string name="dialog_title_remark">备注</string>
    <string name="dialog_mms_restore">您确定要恢复数据？</string>
    <string name="dialog_mms_backup">您确认要备份当前数据？</string>
    <string name="dialog_mms_deldb">您确定要恢复出厂设置？</string>
    <string name="dialog_mms_sendcon">您确定要导入手机中联系人到本应用？</string>
    <string name="dialog_mms_hint">提示:长按可以进行选择复制</string>
    <string name="dialog_mms_restore_time">恢复日期:</string>
    <string name="dialog_mms_backup_time">上次备份日期:</string>
    <string name="DefaultSettings_Guide_Prev">back</string>
    <string name="DefaultSettings_Guide_Next">next</string>
    <string name="not_server">服务已关闭，未连接</string>
    <string name="not_server_bluetooth">服务已启动，蓝牙未开启</string>
    <string name="not_server_devicce">服务已启动，蓝牙已开启，设备未连接</string>
    <string name="not_server_connect">服务已启动，正在连接设备中。。。</string>
    <string name="not_server_found">服务已启动，已连接</string>
    <string name="dialog_mms_handle">处理中...</string>
    <string name="calls_tel">电话</string>
    <string name="calls_phone">手机</string>
    <string name="calls_others">其他</string>
    
    <string name="calendarIconLabel" msgid="7666609097606552806">"Calendar"</string>
    
    <string name="dialog_date_start">设置起始日期 ～ 今</string>
    <string name="dialog_date_end">设置月份</string>
    <string name="dialog_date_bulu">补录日期</string>
    
    <string name= "account">账号</string>
    <string name= "pwd">密码</string>
    <string name= "forget_pwd">忘记密码</string>
    <string name= "login_in">登录</string>
    <string name="cancel">cancel</string>
    <string name="title_main">主页面</string>
    <string name="more_contactgroup">联系人分组 </string>
    <!--   更多 -->
<string name="more">更多</string>
<string name="left_popheh">弹出高度</string>
<string name="left_visibility">VISI</string>
<string name="more_history">浏览记录</string>
<string name="more_seting">设置</string>
<string name="more_settings">更多设置</string>
<string name="more_help">帮助 </string>
<string name="more_opinion">意见反馈</string>
<string name="more_aboutus">关于我们</string>
<string name="more_deldb">恢复出厂设置</string>
<string name="more_update">检测更新</string>
<string name="more_exit">退出-TEST for sturct</string>
<string name="more_apps">应用推荐</string>
<string name="more_screen_lock">待机加锁</string>
<string name="more_contact_send">导入联系人</string>
<string name="more_calls">使用状态</string>
<string name="more_calls_send">使用状态  发送</string>
<string name="more_calls_home">使用状态   本地</string>
<string name="more_restore">数据恢复</string>
</resources>